--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,8 +3,9 @@ resolver = "2"
 members = ["day-*"]
 
 
-[workspace.dependecies]
+[workspace.dependencies]
 nom = "7.1.3"
 itertools = "0.12.0"
 cgmath = "0.18.0"
 enum-map = "2.7.3"
+regex = "1.10.2"
