--- a/rust/justfile
+++ b/rust/justfile
@@ -1,9 +1,9 @@
 default:
   just --list
-run part day=`date +day-%d` release="":
-  cargo run -p {{day}} --bin part{{part}} {{release}}
-test part="" day=`date +day-%d`:
-  cargo test -p {{day}} {{part}}
+run part day=`date +%d` *args="":
+  cargo run -p day-{{day}} --bin part{{part}} {{args}}
+test part="" day=`date +%d` *args="":
+  cargo test -p day-{{day}} {{part}} {{args}}
 create name=`date +day-%d`:
   cargo generate --path ./template --name {{name}}
 load day=`date +%-d` dir="$dir":
